Niels revision: problem description real 1.

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -1,6 +1,6 @@
 @book{VanderLubbe-crypto,
   title={Basic methods of cryptography},
-  author={Van Der Lubbe, Jan CA and Lubbe, Jan CA},
+  author={Van Der Lubbe, Jan CA},
   year={1998},
   publisher={Cambridge University Press}
 }
