Niels revisions: related work.

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -335,6 +335,23 @@
       howpublished = {\url{https://blockchain.info/charts/Difficulty}}
 }
 
+@MISC{visa-transactions,
+      author = {Visa},
+      title = {Stress Test Prepares VisaNet for the Most Wonderful Time of the Year},
+      month = {October},
+      year = {2013},
+      howpublished = {\url{http://www.visa.com/blogarchives/us/2013/10/10/stress-test-prepares-visanet-for-the-most-wonderful-time-of-the-year/index.html}}
+}
+
+@MISC{bitcoin-transactions,
+      author = {Bitcoinwiki},
+      title = {Scalability},
+      month = {November},
+      year = {2015},
+      howpublished = {\url{https://en.bitcoin.it/wiki/Scalability}}
+}
+
+
 @misc{andresen-blocksize,
   title={Bitcoin Improvement Proposal 0101: Increase maximum block size},
   author={Andresen, Gavin},
