--- a/conclusion/conclusion.tex
+++ b/conclusion/conclusion.tex
@@ -5,7 +5,7 @@ As seen as by several attempts in related work with varying success.
 This first step, in an incremental approach to creating a new data structure
 that can be used as a tamper-proof interaction history, is further testimony to that statement.
 But MultiChain is a proof-of-concept that an different approach with multiple chains
-instead of a single chain can be succesfull in creating a reputation system
+instead of a single chain can be succesful in creating a reputation system
 
 A scalable system has been introduced that can track interactions.
 The system does not rely on any central component or a central data structure.
