--- a/problems/denial.tex
+++ b/problems/denial.tex
@@ -1,4 +1,5 @@
 \section{Denial of service attack}
+\label{sect:denial}
 The denial of service attack is a common attack seen on the internet
 that disables a service by flooding it with requests of service.
 This is also a potential attack on MultiChain particulairly because of a bottleneck within MultiChain.
