--- a/problems/sybil.tex
+++ b/problems/sybil.tex
@@ -69,8 +69,8 @@ But these challenges are highly indesirable.
 These challenges require by definition to occupy between two nodes a limited resource to the maximum capacity of a single node.
 While not providing any additional functionality beyond asserting distinct identities.
 These challenges also prove inworkable when entities have hugely different amount of resources available.
-No challenge can be constructed that can be worked by less powerfull devices,
-that could not be worked several times by more powerfull devices.
+No challenge can be constructed that can be worked by less powerful devices,
+that could not be worked several times by more powerful devices.
 
 Next to this, these challenges are only usable with nodes that are active and responding to challenges.
 If a node becomes inactive it cannot be ascertained if the node is a fake identity.
