--- a/relatedWork/blockChain.tex
+++ b/relatedWork/blockChain.tex
@@ -1,20 +1,20 @@
 \section{Block chain}
 \label{sect:bitcoin}
-Bitcoin is a digital currency that uses a interaction history
+Bitcoin is a digital currency that uses a global, full transaction history
 to keep track of transactions made between nodes.
-The interaction history is a datastructure called the block chain.
+It is called a global, full transaction history,
+because the transaction history is shared between every peer and contains every transaction.
+The transaction history is a datastructure called the block chain.
 
 The block chain imposes limits on Bitcoin in several ways.
 These limitations on Bitcoin can be seen as the initial motivation for our work.
 How Bitcoin uses the block chain technology will be introduced first.
-In the following, the limitations imposed by the block chain will be explained.
+In the following sections the limitations imposed by the block chain will be explained.
 
-We will only introduce how Bitcoins uses the block chain and why it does so in such a way.
-This section is not a full explanation of the Bitcoin protocol
-and only discusses relevant parts of the Bitcoin protocol.
+We will only introduce how Bitcoins uses the block chain and why it does so.
 The best starting point for a full explanation of Bitcoins
 is the original paper by Nakamoto\cite{Nakamoto-bitcoin}.
-Further information and improvements on Bitcoin can be found on the Bitcoin website\cite{Bitcoin.org-site}.
+Further information on Bitcoin can be found on the Bitcoin website\cite{Bitcoin.org-site}.
 
 \subsection{Transfer of ownership of a bitcoin}
 The core of the Bitcoin protocol is the block chain.
@@ -26,7 +26,7 @@ A transaction consists of three parts.
 The first part is the public key of the new owner of the bitcoin.
 The hash of the whole, previous transaction and the public key of the new owner is concatenated.
 This concatenation is hashed and this hash is the second part of the transaction.
-The third final part is the signature by the current owner of this new hash.
+The final part is the signature by the current owner of this new hash.
 Inclusion of the hash of the previous transaction chains every transaction to the previous transaction.
 
 The previous transaction is a transaction of the same bitcoin.
@@ -46,8 +46,7 @@ Multiple transactions are aggregrated into a single block.
 Every block contains the hash of the previous block.
 This creates the block chain.
 Transaction chains span across several blocks inside the block chain.
-A diagram can be seen in \todo{Fix direction of arrows}Figure \ref{fig:bt-block-chain} of the block chain.
-
+A diagram can be seen in Figure \ref{fig:bt-block-chain} of the block chain.
 
 \begin{figure}
         \centerline{\includegraphics[scale=0.3]{relatedWork/figs/blocks.eps}}
@@ -72,15 +71,16 @@ This nonce is just a number that can be varied,
 but is only sound if the hash of the whole block starts with a certain number of zeros.
 Miners have to find the correct nonce for their block and this is a proof of work.
 
-But miners can still find a valid nonce at approximately the same time
+However, miners can still find a valid nonce at approximately the same time
 and notify parts of the network of their newly found block.
 This leaves the network again in an inconsisted state.
-These multiple versions of the next block attached to the previous block can be seen as branches.
+Multiple versions of the next block attached to the previous block can be seen as branches.
 
 To solve this inconsistency, Bitcoin nodes save both branches and continue using the longest branch.
 At some point one branch will become predominant in the network.
 More nodes will dedicate compute power to extend this branch and the growth rate will increase for this branch.
 The faster growth rate will ensure that the branch will be adopted by the network as a whole.
+The smaller branch is abandoned and the blocks are orphaned.
 
 The amount of zeros needed in the hash is adjusted to compensate for the fluctuating speed of the network to be able to find nonces.
 The speed of the network is called the hash rate and is the amount of hashes calculated per second.
@@ -89,7 +89,7 @@ and the time before a new block is found,
 which in turn is how fast transactions are processed.
 The amount of zeros can be seen as the difficulty of finding the a block.
 More zeros decreases the likelyhood a nonce will be valid.
-The growth of the estimated hash rate can be seen in Figure \ref{fig:hash-speed}\cite{Blockchain.info-hashspeed},
+The estimated hash rate over time can be seen in Figure \ref{fig:hash-speed}\cite{Blockchain.info-hashspeed},
 and the difficulty in Figure \ref{fig:hash-difficulty}\cite{Blockchain.info-difficulty}.
 
 \begin{figure}[h]
@@ -115,7 +115,6 @@ This makes the network vulnerable if the total compute power is owned by a malic
 even if the attacker only has control of 51\% of the compute power.
 In the end the current branch can be overtaken by a new branch started by the attacker.
 This new branch allows the whole transaction history to be rewritten by the attacker.
-Bitcoin counteracts by introducing points in the chain that are to be considered final and can no longer change.
 
 \subsection{Limitations}
 In this section we will discuss the several limitations of Bitcoins
@@ -123,9 +122,9 @@ that originate from the use of the block chain.
 
 \subsubsection{Size}
 \label{bitcoin-limit-size}
-To be able to prevent double spending and rightfull spending by the right owner,
+To be able to prevent double spending and enable rightful spending by the owner,
 the node verifying a transaction needs to be aware of the full history of a bitcoin.
-This results in that a node needs the entire block chain to verify a transaction.
+This results in that a node needs the entire block chain.
 
 The block chain is a data structure ever increasing in size.
 No block or data contained in that block is removed.
@@ -138,10 +137,12 @@ The size and growth can be seen in Figure \ref{fig:bc-size}.
 	\label{fig:bc-size}
 \end{figure}
 
-The size of the block chain at time of writing already prevents less powerfull devices
+The size of the block chain at time of writing already prevents less powerful devices, like smartphones,
 to operate on the block chain.
 This problem is only going to become bigger with the continued creation of transactions
 and at a faster pace due to increased adoption of Bitcoin.
+The growth of the size of the block chain has already outpaced the growth of the power of a smartphone
+and will also be relatively larger compared to other types of hardware.
 
 This problem was already identified by Nakamoto in his original paper on Bitcoin.
 The paper proposes Simplified Payment Verification (SPV).
@@ -161,22 +162,23 @@ Therefor it is not a solution for the problem for every one.
 \subsubsection{Amount of transactions}
 The usability of a digital currency is in part determined by the time it takes to process a transaction
 and how many transactions can be processed in a certain time scale.
-The amount of transactions that can be handled by Bitcoins are determined by three factors:
+The amount of transactions that can be handled by Bitcoins are determined by two factors:
 \begin{itemize}
 \item Block size
 \item Block creation time
 \end{itemize}
 
 The block size is currently capped at a fixed maximum size.
-A block can be smaller, but cannot exceed the maximum size
-Inside a block there is date that is always present and the rest is filled up by transactions picked by the miner.
-The number of transactions that can be fitted inside a block is limited by the upper limit of the size of a block.
-The current blocksize limit is 1mb.
+A block can be smaller, but cannot exceed the maximum size.
+The current blocksize limit is 1MB.
+A block has a fixed part and the rest is filled up by transactions picked by the miner.
+A transaction can vary in length.
+The number of transactions that can be fitted inside a block is limited by the maximum size.
 
 This maximum size has no clear documentation of why it was picked as such.
 There are several implications of raising the size, aswell as lowering.
 Increasing the block size will increase the number of transactions that can be processed.
-But the increased block size will increase propogation time of the block when found by a number.
+But the increased block size will increase propogation time of the block in the network.
 A longer propogation time will in turn result in a higher orphane rate of the miner.
 
 Large clusters of hash power owned by a single miner or mine cluster can be placed closer together
@@ -194,11 +196,12 @@ The reverse is true if the time is increased.
 But the time between blocks is a balance between the orphan rate of blocks
 and how fast transactions are committed to the block chain.
 
-These two factors currently result in a theoretical limit of 7 transactions per second.
+These two factors currently result in a theoretical limit of 7 transactions per second\cite{bitcoin-transactions}.
 This can be calculated by dividing the maximum blocksize with the minimal size of a transaction.
 The performance of Bitcoin can be changed by changing the settings of these two factors.
 This limits the global usage of Bitcoins.
-In comparison Visanet, that handles transactions under Visa, is able to process 54.000 transactions per second.
+In comparison, Visanet, that handles transactions under Visa,
+is able to process 54.000 transactions per second\cite{visa-transactions}.
 To be a real replacement of the current traditional currencies
 a higher number of transactions per second have to be achieved by a digital currency.
 There are at time of writing several competing proposals to increase the block size\cite{garzik-blocksize}\cite{andresen-blocksize}.
