Niels revisions: design

--- a/design/anonymity.tex
+++ b/design/anonymity.tex
@@ -22,5 +22,6 @@ Network analysis can already measure the total amount of data transferred.
 So the design and implementation of MultiChain does not break anonymity already guaranteed by Tribler.
 
 But MultiChain does make network analysis easier as measurement points between every node do not have to be introduced.
-The chain of every node can be requested.k
+The chain of every node can be requested.
 The chain contains the data of every transaction of a peer and can be used to analyse the network.
+The network analysis can now also be performed retrospectively using data acquired from the MultiChain.
