--- a/design/blocksize.tex
+++ b/design/blocksize.tex
@@ -59,4 +59,4 @@ on the total uploaded and downloaded MB that MultiChain can track.
 This limit is imposed by SQLite and is $2^{62}$.
 Bigger numbers cannot be saved in SQLite using a native datatype.
 The upper limit for MultiChain is therefore 4.612 \ensuremath{\times 10^{9}} petabytes.
-This is clearly more than sufficient.
+This is clearly more than sufficient for now.
