--- a/design/design.tex
+++ b/design/design.tex
@@ -11,7 +11,7 @@ Additional pheripheral systems that work with MultiChain are also explained.
 \input{design/community.tex}
 
 \section{Datastructure design}
-In this section we wil describe how the chains inside MultiChain are designed.
+In this section we wil describe the design of the chains inside MultiChain.
 We will first describe the contents of a single block.
 Next, we will explain how blocks are chained together for a single peer.
 These chains are intertwined and we will clarify this entanglement.
@@ -26,7 +26,7 @@ Finally, we will describe how the blocks provide security against tampering.
 \label{design:block_creation}
 In this section we will explain how blocks can be created with a simple design
 that will limit and expose freeriding.
-Afterwards we will explain a fundamental problem with creating blocks in an asynchronous system.
+Afterwards, we will explain a fundamental problem with creating blocks in an asynchronous system.
 This problem is present in the simple design
 and we will describe how MultiChain deals with this problem.
 
