--- a/design/integration.tex
+++ b/design/integration.tex
@@ -1,11 +1,8 @@
 \section{Integration with Tribler}
-The MultiChain community can be run standalone,
-but its main use is to integrate with Tribler and track up and download for torrents.
-It will replace the current reputation system Bartercast in the future.
-
-For integration a scheduler is implemented between the MultiChain community
+For integration a scheduler, is implemented between the MultiChain community
 and the community that handles the anonymous download.
-For additional detail on the anonymous download communities see \cite{Plak-anonymous}\cite{ruigrok-anonymous}.
+For additional detail on the anonymous download communities
+see the master's theses of R. Ruigrok\cite{ruigrok-anonymous} and R. Plak\cite{Plak-anonymous}.
 The scheduler tracks session up and download amounts and schedules a block to be created,
 when the amount of uploaded bytes is above a certain threshold.
 The scheduler currently only tracks traffic of anonymous downloads.
@@ -18,3 +15,5 @@ The most important improvement that should be introduced is the punishment of no
 Currently, nodes can deny to have their behaviour tracked.
 The next improvement is to actually determine the level of cooperation a node receives based upon their previous behaviour.
 The actual decision making based upon past behaviour is not part of the thesis.
+The processes of actually making the descision is a complicated process that has to take into account a lot of variables
+and requires extensive experimentation to validate.
