--- a/design/persistence.tex
+++ b/design/persistence.tex
@@ -42,7 +42,7 @@ The message is saved in a converted format and will be decoded when the message 
 Instead of storing information in a separate database,
 the information could have been retrieved from the Dispersy database.
 But the Dispersy database is not queryable.
-All the information is stored in a converted format
+Because all the information is stored in a converted format
 that prevents queries to search the message for its contents.
 For this reason, the dispersy database is not used and a separate database is used.
 
