--- a/design/community.tex
+++ b/design/community.tex
@@ -1,12 +1,14 @@
 \section{MultiChain Community}
 Tribler uses communities to add functionalities to peers.
-A peer loads in a community and this community provides a set of messages and endpoints for other peers.
-The community can communicate with the endpoints of other peers as well and send a message to these endpoint.
+New communities are packaged into new Tribler versions.
+These versions are downloaded by peers.
+A community provides a set of messages and endpoints for other peers.
+The community can communicate with the endpoints of other peers as well and send a message to these endpoints.
 Other peers are automatically discovered using Dispersy.
-Examples of a community are the TunnelCommunity that adds functionality to download anonymously\cite{Plak-anonymous}
+Examples of communities are the TunnelCommunity that adds functionality to download anonymously\cite{Plak-anonymous}
 or the AllChannelCommunity to distribute torrent files.
-The designed system will be implemented by adding a new community to Tribler.
+Our system will be implemented by adding a new community to Tribler.
 
 The MultiChain community can be run standalone,
-but its main use is to integrate with Tribler and track up and download for torrents.
-It will replace the current reputation system Bartercast in the future.
+but its main use is to integrate with Tribler and track up and download amounts for torrents.
+It aims to replace the current reputation system Bartercast in the future.
