--- a/design/crawler.tex
+++ b/design/crawler.tex
@@ -1,12 +1,12 @@
 \section{Crawler}
-A crawler was implemented that visits other nodes and request the full chain of that node.
-The crawler was used for the experiments and
+We implemented a crawler that visits other nodes and request the full chain of that node.
+The crawler was built to be used for the experiments and
 is a first step in a more sophisticated crawler that will help to solve the known vulnerabilities.
 These vulnerabilities will be described in chapter \ref{problems}.
 
 \subsection{Recursively request blocks}
 Dispersy provides a list of other nodes that were recently found
-and can report when the node itself is found by an other node.
+and can report when the node itself is found by another node.
 Both are sources of destinations nodes that the crawler will visit
 and request the chain from.
 
@@ -23,6 +23,11 @@ If the node is not known, the block is ignored.
 This is done recursively untill the crawler reaches the genesis block of the chain.
 In this fashion a breadth first search is implemented for any unknown block
 that is chained in chronologically before the latest block.
+
+The crawl tries to aggregrate as much blocks as possible.
+But it gives no certainty that the full MultiChain is collected.
+The crawler is able to crawl a disconnected MultiChain,
+if for every disconnected partition a peer is known by Dispersy.
 
 \begin{figure}
 	\centerline{\includegraphics[scale=0.3]{design/figs/crawler.eps}}
