--- a/design/scalable-reciprocity.tex
+++ b/design/scalable-reciprocity.tex
@@ -1,26 +1,25 @@
 \subsection{Scalable reciprocity}
 \label{sect:scalable-reciprocity}
-One of the main pillars of the design is to have a transaction history for every peer.
-This is in contrast to not distribute a global, full transaction history containing the transactions of every peer.
-For example, used in the design of the blockchain of Bitcoins, discussed in section \ref{sect:bitcoin}.
-The reasoning behind the idea to abandon this type of design is that a common, full truth
-will become the bottleneck in the system.
-This will limit the amount of interactions that can be processed
-or will limit the participiation of less powerfull machines.
+One of the main pillar of the design is to have a transaction history for every peer.
+The reasoning behind the idea to abandon a global, full transaction history
+is that it will always become the bottleneck in the system.
+This will limit the amount of interactions that can be processed.
+Before this limit is reached, less powerful machines are already excluded in participating.
+For example, a global, full transaction history is the block chain of Bitcoins, discussed in section \ref{sect:bitcoin}.
+The block chain already shows these limitations.
 Commonly, this way of design is used to prevent double spending.
 We believe that it is possible and much cheaper to detect and punish double spending than prevent double spending.
+This will be described in section \ref{sect:branch}
 
-The reason for the limitation is that every interactions will have to be distributed to every peer in the network.
-Every transaction has to be processed by every node at the cost of bandwidth, compute power and storage.
+The reason for the limitation is that every interaction will have to be distributed to every peer in the network.
+Every transaction has to be processed by every node at the cost of bandwidth, computation power and storage.
 The cost might be very limited for a single transaction,
-but with greater scale these cost will add up.
+but with greater scale these costs will add up when the amount of transactions are increased.
 The amount of these three resources is limited and will limit the amount of transactions that can be processed.
 This problem can be seen to affect Bitcoins and has been demonstrated in section \ref{bitcoin-limit-size}.
 
-Every node has its own transaction history and only needs the transaction history of its peers it interacts with.
-Within MultiChain peers can try to congregrate the full transaction history or only a subse.t
-The flexibility provides MultiChain with unbounded scalability.
-The amount of bandwidth, compute power and storage is limited to the minimal needed amount
-that is needed to process only the relevant transactions.
-This will allow low-powered devices to keep participating when they only have a low volume of transactions.
-It also allows higher volumes of transactions in the system as a whole.
+Every node has its own transaction history and only needs the transaction history of the peers it interacts with.
+Within MultiChain peers can try to congregrate the full transaction history or only a subset
+This flexibility provides MultiChain with unbounded scalability for the network as a whole.
+Low-powered devices will be able to keep participating
+as long as they have enough power to process the transactions relevant to them.
