Niels revisions: problems

--- a/problems/branch.tex
+++ b/problems/branch.tex
@@ -87,11 +87,11 @@ The likelihood depends on:
 \item Likelihood of interactions between A or B and C
 \end{itemize}
 
-All these properties will influence the chance of C coming across an obscured block.
+These properties will influence the chance of C coming across an obscured block.
 
 \subsection{Punishment of this attack}
 When the fraud is detected by C, then currently only C can punish M by no longer interacting with him.
-There is currently no way of making it globally know to every node in the network that fraud was committed.
+There is currently no way of making it globally known to every node in the network that fraud was committed.
 So only M is punished by C and can continue his abuse of other nodes in the network.
 
 A proposal for the future, that is already currently worked on, is to construct an additional network
