--- a/problems/problems.tex
+++ b/problems/problems.tex
@@ -1,10 +1,10 @@
 \chapter{Known vulnerabilities}
 \label{problems}
 There are several known security vulnerabilities with the current design.
-As said in section \ref{pb-aim} an incremental approach was taken.
+As said in section \ref{pb-aim}, an incremental approach was taken.
 As such, the design is part of a bigger system that as a whole is to be deployed in the real world.
 In this section we will describe the known vulnerabilities
-and explain the future work that is needed to solve these vulnerabilities.
+and explain the future work that is needed to limit these vulnerabilities.
 
 \input{problems/branch.tex}
 \input{problems/sybil.tex}
